# PuiusGUI-cmake

./: CMakeLists.txt
src/: PuiusGUI.c
src/test/: test.c
